# orban-agent

./: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README-zh.md  README.md  RELEASE.md  install.ps1  install.sh  test-local-install.sh
.github/workflows/: release.yml
agent/: BUILD.md  DESIGN.md  README.md
agent-core/: CORE_STATUS.md  Cargo.toml  build.rs  test_agent.sh
agent-core/proto/: orban.proto
agent-core/src/: config.rs  daemon.rs  error.rs  lib.rs  main.rs  types.rs
agent-core/src/cli/: earnings.rs  logs.rs  mod.rs  start.rs  status.rs  stop.rs
agent-core/src/compute/: executor.rs  mod.rs  sandbox.rs  simple_executor.rs
agent-core/src/earnings/: mod.rs  tracker.rs
agent-core/src/gpu/: amd.rs  apple.rs  detector.rs  device.rs  mod.rs  nvidia.rs  pow.rs
agent-core/src/network/: auth.rs  client.rs  mod.rs  orban_protocol.rs  reconnect.rs  simple_client.rs
agent/core/: Cargo.toml
agent/core/src/: config.rs  error.rs  lib.rs  types.rs
agent/core/src/compute/: downloader.rs  executor.rs  mod.rs  sandbox.rs  verifier.rs
agent/core/src/earnings/: mod.rs
agent/core/src/gpu/: amd.rs  apple.rs  detector.rs  mod.rs  monitor.rs  nvidia.rs
agent/core/src/network/: client.rs  mod.rs  protocol.rs
agent/installer/linux/: install.sh
docs/: ARCHITECTURE.md  orban-protocol.md
orban-dashboard/: package.json  pnpm-lock.yaml
orban-dashboard/src/: App.css  App.jsx
orban-dashboard/src-tauri/: Cargo.toml  tauri.conf.json
orban-dashboard/src-tauri/src/: main.rs
web-ui/: README.md  index.html
web-ui/css/: style.css
web-ui/js/: app.js
